--- a/package.json
+++ b/package.json
@@ -11,7 +11,19 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "styled-components": "^5.3.5", 
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-act": "^1.8.0",
+    "redux-saga": "^1.1.3",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
+    
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
